--- a/configs/template_defconfig
+++ b/configs/template_defconfig
@@ -8,11 +8,12 @@ BR2_SYSTEM_BIN_SH_BASH=y
 # BR2_TARGET_GENERIC_GETTY is not set
 # BR2_TARGET_GENERIC_REMOUNT_ROOTFS_RW is not set
 BR2_TARGET_TZ_INFO=y
-BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_MINIC_CONTAINER_PATH)/board/minic/template/post-build.sh"
-BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL_MINIC_CONTAINER_PATH)/board/minic/common/busybox.config"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_MINIC_CONTAINER_PATH)/board/template/post-build.sh"
+BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL_MINIC_CONTAINER_PATH)/board/common/busybox.config"
+BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_MINIC_CONTAINER_PATH)/board/template/rootfs-overlay/"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 BR2_TARGET_ROOTFS_TAR_GZIP=y
 
 # Add the packages or config below
 # BR2_PACKAGE_ETCD=y
-# BR2_PACKAGE_FLANNEL=y
+BR2_PACKAGE_FLANNEL=y
